# Meownix

./: README.md  licence  meowfetch
MeowCode/: Makefile  meowcode.cpp
MeowPkg/: meow.sh
MeowScript/: syntax.md
MeowVIM/: dependency-reduced-pom.xml  pom.xml
MeowVIM/src/main/java/org/meownix/: Main.java  MeowVIM.java
MeowVIM/src/main/java/org/meownix/utils/: logger.java
Meowcro/: Cargo.toml  README.MD
Meowcro/src/: clipboard.rs  editor.rs  main.rs  terminal.rs  ui.rs  unicode.rs  widgets.rs  widgets_impl.rs
Meowculator/: Makefile  meowculator.c
Meoweather/: index.html  main.js  package.json  preload.js  readme
Meowminal/: meowminal.py
Meowtop/: Meowtop  Meowtop.desktop  install.sh  meowtop-binary  start-prismx3
Notes/: package-lock.json  package.json  pom.xml  readme.md
Notes/src/: index.html  main.js  styles.css
Notes/src-tauri/: Cargo.toml  tauri.conf.json
Notes/src-tauri/icons/: icon.icns
Notes/src/main/java/org/meownix/: Main.java  Notes.java
Notes/src/main/java/org/meownix/Utilitys/: LoggerUtility.java
Snake/: readme  readme.md
pkgs/: meowcode
pkgs/meow/: meow
pkgs/meow vim/: meowvim
pkgs/meowcode/: meowcode
pkgs/meowculator/: meowculator
pkgs/meoweather/: meoweather
pkgs/meowed/: meowed  meowide
pkgs/meowmanager/: meowmanager
pkgs/meowminal/: meowminal
pkgs/meows/: meows
pkgs/meowtop/: meowtop
pkgs/meowvim/: meowvim
pkgs/notes/: notes
pkgs/snake/: snake
